RESOLVED FIXED192099
Fix unnecessary call to [NSApplication sharedApplication]
https://bugs.webkit.org/show_bug.cgi?id=192099
Summary Fix unnecessary call to [NSApplication sharedApplication]
Suresh Koppisetty
Reported 2018-11-28 13:33:31 PST
[NSApplication sharedApplication] call is no longer needed in platformInitializeWebProcess as [NSApplication _accessibilityInitialize] will call [NSApplication sharedApplication].
Attachments
Patch (1.72 KB, patch)
2018-11-28 13:40 PST, Suresh Koppisetty
no flags
Suresh Koppisetty
Comment 1 2018-11-28 13:40:23 PST
Geoffrey Garen
Comment 2 2018-11-29 11:34:23 PST
Comment on attachment 355912 [details] Patch r=me
WebKit Commit Bot
Comment 3 2018-11-29 11:59:50 PST
Comment on attachment 355912 [details] Patch Clearing flags on attachment: 355912 Committed r238681: <https://trac.webkit.org/changeset/238681>
WebKit Commit Bot
Comment 4 2018-11-29 11:59:52 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-29 12:01:30 PST
Darin Adler
Comment 6 2018-12-02 16:12:26 PST
Comment on attachment 355912 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355912&action=review > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:187 > // Currently, it is also needed to allocate and initialize an NSApplication object. The patch should have removed this comment, too. It now makes no sense!
Suresh Koppisetty
Comment 7 2018-12-03 10:32:12 PST
Comment on attachment 355912 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355912&action=review >> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:187 >> // Currently, it is also needed to allocate and initialize an NSApplication object. > > The patch should have removed this comment, too. It now makes no sense! I think the statement still makes sense as [NSApplication _accessibilityInitialize] allocates and initializes an NSApplication object before doing the accessibility initialization. This patch only removes the double call to [NSApplication sharedApplication], not the dependency of initializing an NSApplication object.
Note You need to log in before you can comment on or make changes to this bug.