Addressed a FIXME by removing an unnecessary call to [NSApplication sharedApplication]. https://bugs.webkit.org/show_bug.cgi?id=192099

Patch by Suresh Koppisetty <skoppisetty@apple.com> on 2018-11-29
Reviewed by Geoffrey Garen.

[NSApplication sharedApplication] call is no longer needed in platformInitializeWebProcess as [NSApplication _accessibilityInitialize] calls [NSApplication sharedApplication].

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/206831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238681 268f45cc-cd09-0410-ab3c-d52691b4dbfc